alteraçoes em modulos, docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,9 +61,9 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        NEXT_PUBLIC_API_URL: http://localhost:8080
     container_name: educ-frontend
-    environment:
-      NEXT_PUBLIC_API_URL: http://localhost:8080
     expose:
       - "5173"
     networks:
@@ -93,7 +93,7 @@ services:
     container_name: educ-uptime-kuma
     restart: unless-stopped
     ports:
-      - "3001:3001"   
+      - "3001:3001"
     volumes:
       - uptime-kuma-data:/app/data
     networks:
