--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,15 +13,17 @@ server {
 
     # BACKEND - NESTJS
     location /usuario {
-        proxy_pass http://backend:3000/usuario;
+        proxy_pass http://backend:3000;
         proxy_http_version 1.1;
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /user-curso {
-        proxy_pass http://backend:3000/user-curso;
+        proxy_pass http://backend:3000;
         proxy_http_version 1.1;
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
